-added gear and acceleration support -clean up -disabled gauge descriptions